# ScenarioCharacterization

./: .gitignore  .pre-commit-config.yaml  README.md  data  pyproject.toml  samples
.claude/: CLAUDE.md
.github/workflows/: package.yml  pre-commit.yaml
data_tools/: resplit.py  visualization.py
docs/: ANALYSIS.md  ARGOVERSE2_EXAMPLE.md  CHARACTERIZATION.md  DATASET_PREPARATION.md  DEVELOPMENT.md  EXAMPLE.md  NUSCENES_EXAMPLE.md  ORGANIZATION.md  SCHEMAS.md  WAYMO_EXAMPLE.md
meta/: gt_critical_categorical_individual.json  gt_critical_categorical_interaction.json  gt_critical_categorical_safeshift.json  gt_critical_categorical_safeshift_2.json  gt_critical_continuous_individual.json  gt_critical_continuous_interaction.json  gt_critical_continuous_safeshift.json  scenario_splits.json  scene_to_scores_mapping.csv  type_cyclist_cyclist_feature_percentiles.json  type_cyclist_feature_percentiles.json  type_pedestrian_cyclist_feature_percentiles.json  type_pedestrian_feature_percentiles.json  type_pedestrian_pedestrian_feature_percentiles.json  type_vehicle_cyclist_feature_percentiles.json  type_vehicle_feature_percentiles.json  type_vehicle_pedestrian_feature_percentiles.json  type_vehicle_vehicle_feature_percentiles.json
meta/argoverse2/: gt_critical_categorical_individual.json  gt_critical_categorical_interaction.json  gt_critical_categorical_safeshift.json  scenario_splits.json  type_cyclist_cyclist_feature_percentiles.json  type_cyclist_feature_percentiles.json  type_pedestrian_cyclist_feature_percentiles.json  type_pedestrian_feature_percentiles.json  type_pedestrian_pedestrian_feature_percentiles.json  type_vehicle_cyclist_feature_percentiles.json  type_vehicle_feature_percentiles.json  type_vehicle_pedestrian_feature_percentiles.json  type_vehicle_vehicle_feature_percentiles.json
meta/nuscenes/: gt_critical_categorical_individual.json  gt_critical_categorical_interaction.json  gt_critical_categorical_safeshift.json  scenario_splits.json  type_cyclist_cyclist_feature_percentiles.json  type_cyclist_feature_percentiles.json  type_pedestrian_cyclist_feature_percentiles.json  type_pedestrian_feature_percentiles.json  type_pedestrian_pedestrian_feature_percentiles.json  type_vehicle_cyclist_feature_percentiles.json  type_vehicle_feature_percentiles.json  type_vehicle_pedestrian_feature_percentiles.json  type_vehicle_vehicle_feature_percentiles copy.json  type_vehicle_vehicle_feature_percentiles.json
meta/waymo/: gt_critical_categorical_individual.json  gt_critical_categorical_interaction.json  gt_critical_categorical_safeshift.json  scenario_splits.json  type_cyclist_cyclist_feature_percentiles.json  type_cyclist_feature_percentiles.json  type_pedestrian_feature_percentiles.json  type_pedestrian_pedestrian_feature_percentiles.json  type_vehicle_cyclist_feature_percentiles.json  type_vehicle_feature_percentiles.json  type_vehicle_pedestrian_feature_percentiles.json  type_vehicle_vehicle_feature_percentiles.json
meta/waymo_v0/: gt_critical_categorical_individual.json  gt_critical_categorical_safeshift.json
safeshift_tools/: closest_lane_utils.py  cluster_anomaly.py  clustering_utilis.py  compute_closest_lanes.py  compute_features.sh  compute_frenet_interp.py  compute_primitives.py  compute_trajanomaly.py  frenet_utils.py  primitives_utils.py
samples/: sample_12b00a807927f906.pkl  sample_18fe80c36c5488f0.pkl  sample_2ba0b580e9df7a77.pkl  sample_3398361f3fb75704.pkl  sample_9e3a764d4ba960af.pkl  sample_ab4bec45aef79bce.pkl  sample_b71b5927cd41682b.pkl  sample_c3b344c6e2f77c59.pkl  sample_c5189ed274850bbf.pkl  sample_c852bbdba6cb1984.pkl  sample_infos.pkl
samples/scenarios/: sample_1159dd9df2d0df9e.pkl  sample_39147ec116fd26d9.pkl  sample_5b32bf4dd0c080bb.pkl  sample_752cd9768f86ed57.pkl  sample_7c0b045ea4938342.pkl  sample_a4f0610566f018dd.pkl  sample_b5317829b177f0ab.pkl  sample_bc168b6ded573965.pkl  sample_df5a44f14b0ef463.pkl  (+1 more)
src/: read_shards.py  run_converter.py  run_feature_processor.py  run_processor.py  run_score_processor.py  viz_scores_pdf.py
utils/: common.py
(+414 files in other folders)
