[project]
name = "scenariocharacterization"
version = "0.1.0"
description = "Automated Scenario Characterization Toolkit."
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "duckdb>=1.3.0",
    "easydict>=1.13",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "intervaltree>=3.1.0",
    "isort>=6.0.1",
    "joblib>=1.5.1",
    "matplotlib>=3.9.4",
    "natsort>=8.4.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyproj>=3.6.1",
    "scikit-spatial>=9.0.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["src"]
