[project]
name = "scenariocharacterization"
version = "0.1.0"
description = "Automated Scenario Characterization Toolkit."
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
   "black>=25.1.0",
   "colorlog>=6.9.0",
   "duckdb>=1.3.0",
   "easydict>=1.13",
   "hydra-core>=1.3.2",
   "imageio>=2.37.0",
   "intervaltree>=3.1.0",
   "isort>=6.0.1",
   "joblib>=1.5.1",
   "matplotlib>=3.6.1",
   "natsort>=8.4.0",
   "numpy==1.21.5",
   "pandas==1.5.3",
   "pre-commit>=4.2.0",
   "pyarrow>=10.0.0",
   "pydantic>=2.11.5",
   "pyproj>=3.6.1",
   "scikit-spatial>=9.0.1",
   "scipy>=1.9.1",
   "seaborn>=0.12.0",
   "shapely>=2.0.7",
   "torch>=2.7.1",
   "tqdm>=4.67.1",
]

[project.optional-dependencies]
waymo = [
    "tensorflow==2.11",
    "waymo-open-dataset-tf-2-11-0>=1.6.1",
]


[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
