[build-system]
requires = ["setuptools==67.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-characterization"
version = "0.1.2"
authors = [
    {name="Ingrid Navarro", email="ingridn@cmu.edu"},
]
description = "Automated Scenario Characterization Toolkit."
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
license = {file = "LICENSE"}
dependencies = [
   "colorlog>=6.9.0",
   "hydra-core>=1.3.2",
   "joblib>=1.5.1",
   "natsort>=8.4.0",
   "numpy==1.21.5; python_version == '3.10'",
   "numpy>=2.2.6; python_version >= '3.11'",
   "omegaconf>=2.3.0",
   "pandas==1.5.3; python_version == '3.10'",
   "pandas>=2.3.0; python_version >= '3.11'",
   "pydantic>=2.11.5",
   "scipy>=1.9.1",
   "seaborn>=0.12.0",
   "shapely>=2.0.7",
   "torch>=2.7.1",
   "tqdm>=4.67.1",
]
keywords = ["Trajectory Datasets", "Safety Metrics", "Characterization"]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.6.1",
]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "duckdb>=1.3.0",
    "deptry>=0.23.0",
]
waymo = [
    "tensorflow==2.11; python_version=='3.10'",
    "waymo-open-dataset-tf-2-11-0>=1.6.1; python_version=='3.10'",
]


[projec.urls]
Homepage = "https://navars.xyz/safeshift/"
Repository = "https://github.com/navarrs/ScenarioCharacterization"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "docs", "scripts"]

[tool.setuptools.package-data]
"characterization" = ["**/*.yaml"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.deptry]
exclude = [
    "tmp", "src/scripts"
]

[tool.deptry.package_module_name_map]
waymo-open-dataset-tf-2-11-0 = "waymo_open_dataset"
tensorflow = "tensorflow"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "deptry",
    "duckdb",
    "pre-commit",
    "black",
    "isort",
    "tensorflow"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
